--- a/package.json
+++ b/package.json
@@ -9,35 +9,39 @@
   },
   "dependencies": {
     "@expo/vector-icons": "^13.0.0",
-    "@react-native-async-storage/async-storage": "~1.17.3",
-    "@react-native-masked-view/masked-view": "0.2.7",
+    "@react-native-async-storage/async-storage": "^1.19.3",
+    "@react-native-community/viewpager": "^5.0.11",
+    "@react-native-masked-view/masked-view": "0.2.9",
     "@react-navigation/bottom-tabs": "^6.5.9",
     "@react-navigation/native": "^6.1.8",
     "@react-navigation/stack": "^6.2.2",
     "dotenv": "^10.0.0",
-    "expo": "^47.0.0",
-    "expo-constants": "~13.2.3",
-    "expo-splash-screen": "^0.22.0",
-    "expo-updates": "~0.15.6",
+    "expo": "^49.0.0",
+    "expo-constants": "~14.4.2",
+    "expo-device": "^5.6.0",
+    "expo-notifications": "^0.23.0",
+    "expo-splash-screen": "~0.20.5",
+    "expo-updates": "~0.18.16",
     "firebase": "9.6.11",
     "formik": "2.1.4",
-    "react": "18.0.0",
-    "react-dom": "18.0.0",
-    "react-native": "0.69.4",
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
+    "react-native": "0.72.6",
     "react-native-elements": "^3.4.3",
-    "react-native-gesture-handler": "~2.5.0",
+    "react-native-gesture-handler": "~2.12.0",
     "react-native-image-gallery": "^2.1.5",
     "react-native-keyboard-aware-scroll-view": "^0.9.4",
-    "react-native-reanimated": "~2.9.1",
-    "react-native-safe-area-context": "4.3.1",
-    "react-native-screens": "~3.15.0",
-    "react-native-web": "~0.18.7",
+    "react-native-masonry-list": "^2.16.1",
+    "react-native-reanimated": "~3.3.0",
+    "react-native-safe-area-context": "4.6.3",
+    "react-native-screens": "~3.22.0",
+    "react-native-web": "~0.19.6",
     "yup": "0.27.0"
   },
   "devDependencies": {
     "@babel/core": "^7.18.6",
     "@babel/runtime": "^7.9.0",
-    "babel-preset-expo": "~9.2.0"
+    "babel-preset-expo": "^9.5.0"
   },
   "private": true
 }
