--- a/package.json
+++ b/package.json
@@ -15,10 +15,12 @@
     "@react-navigation/bottom-tabs": "^6.5.9",
     "@react-navigation/native": "^6.1.8",
     "@react-navigation/stack": "^6.2.2",
+    "date-fns": "^2.30.0",
     "dotenv": "^10.0.0",
     "expo": "^49.0.0",
     "expo-constants": "~14.4.2",
     "expo-device": "^5.6.0",
+    "expo-image-picker": "^14.5.0",
     "expo-notifications": "^0.23.0",
     "expo-splash-screen": "~0.20.5",
     "expo-updates": "~0.18.16",
@@ -30,6 +32,7 @@
     "react-native-elements": "^3.4.3",
     "react-native-gesture-handler": "~2.12.0",
     "react-native-image-gallery": "^2.1.5",
+    "react-native-image-picker": "^7.0.2",
     "react-native-keyboard-aware-scroll-view": "^0.9.4",
     "react-native-masonry-list": "^2.16.1",
     "react-native-reanimated": "~3.3.0",
