Added post and comments to home

--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@react-native-async-storage/async-storage": "^1.19.3",
     "@react-native-community/viewpager": "^5.0.11",
     "@react-native-masked-view/masked-view": "0.2.9",
+    "@react-native-picker/picker": "^2.5.1",
     "@react-navigation/bottom-tabs": "^6.5.9",
     "@react-navigation/native": "^6.1.8",
     "@react-navigation/stack": "^6.2.2",
@@ -21,6 +22,7 @@
     "expo-constants": "~14.4.2",
     "expo-device": "^5.6.0",
     "expo-image-picker": "^14.5.0",
+    "expo-media-library": "^15.6.0",
     "expo-notifications": "^0.23.0",
     "expo-splash-screen": "~0.20.5",
     "expo-updates": "~0.18.16",
